--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="headline">
             <h2>Visual Multi-Object Tracking Using Event Camera Frames</h2>
             <p>This part demonstrates the results of visual tracking based on Kalman filter estimation for future visual motion for objects. The video demonstration consists of four sections. The first section (Section A) presents the current observed motion from the simulated dynamic event camera frame. Section B shows the corresponding RGB frame captured by a regular RGB camera. The third section (Section C) shows the cosine distance error between the estimated visual motion and the observed one from the event camera. The histogram shown in this section presents the error between the estimation features and the captured visual motion. Section D shows the currently extracted visual motion features. Both C and D sections present estimation and features for the white van car with ID 0. </p>
-            <img src="images/part_a_img.jpg" alt="Left Headline Image">
+            <img src="https://github.com/MohamedNagyMostafa/dvs_annt.github.io/blob/main/part_a_img.jpg" alt="Left Headline Image">
             <video controls>
                 <source src="videos/dvs.mp4" type="video/mp4">
                 Your browser does not support the video tag.
