--- a/index.html
+++ b/index.html
@@ -48,19 +48,17 @@
             <h2>Visual Multi-Object Tracking Using Event Camera Frames</h2>
             <p>This part demonstrates the results of visual tracking based on Kalman filter estimation for future visual motion for objects. The video demonstration consists of four sections. The first section (Section A) presents the current observed motion from the simulated dynamic event camera frame. Section B shows the corresponding RGB frame captured by a regular RGB camera. The third section (Section C) shows the cosine distance error between the estimated visual motion and the observed one from the event camera. The histogram shown in this section presents the error between the estimation features and the captured visual motion. Section D shows the currently extracted visual motion features. Both C and D sections present estimation and features for the white van car with ID 0. </p>
             <img src="https://raw.githubusercontent.com/MohamedNagyMostafa/dvs_annt.github.io/main/part_a_img.jpg" alt="Left Headline Image">
-            <video controls>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bx5OtXj64OI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/bx5OtXj64OI">
+            </iframe>
         </div>
 
         <div class="headline">
             <h2>Quality Assessment for Manually Annotated Data</h2>
             <p>This part demonstrates the results of the quality assessment for manually annotated data. The goal is to locate potential annotation faults in detection, classification, localization, and tracking. The video displays three different scenarios. The first scenario highlights potential miss-labeled objects in the annotation. The second scenario highlights the localization precision of the annotation. Lastly, the last part highlights tracks that potentially have inconsistency tracking annotation. </p>
-            <video controls>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/794LTuLg7ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/794LTuLg7ZY">
+            </iframe>
         </div>
     </div>
 
